--- a/Makefile.config
+++ b/Makefile.config
@@ -43,7 +43,10 @@ BLAS := open
 
 # NOTE: this is required only if you will compile the python interface.
 # We need to be able to find Python.h and numpy/arrayobject.h.
-PYTHON_INCLUDE := /apps/software/Python/2.7.13-foss-2016b/include/python2.7 /apps/software/Python/2.7.13-foss-2016b/lib/python2.7/site-packages/numpy-1.11.1-py2.7-linux-x86_64.egg/numpy/core/include
+PYTHON_INCLUDE := apps/software/Python/2.7.13-foss-2016b/include/python2.7 \
+		/apps/software/Python/2.7.13-foss-2016b/lib/python2.7/site-packages/numpy-1.11.1-py2.7-linux-x86_64.egg/numpy/core/include
+		/usr/include/python2.7 \
+		/usr/lib/python2.7/dist-packages/numpy/core/include 
 # Anaconda Python distribution is quite popular. Include path:
 # Verify anaconda location, sometimes it's in root.
 # ANACONDA_HOME := $(HOME)/anaconda
@@ -52,7 +55,8 @@ PYTHON_INCLUDE := /apps/software/Python/2.7.13-foss-2016b/include/python2.7 /app
 		# $(ANACONDA_HOME)/lib/python2.7/site-packages/numpy/core/include \
 
 # We need to be able to find libpythonX.X.so or .dylib.
-PYTHON_LIB :=  $FASTDIR/virtualenvs/hed/lib/python2.7/site-packages
+PYTHON_LIB :=  $FASTDIR/virtualenvs/hed/lib/python2.7/site-packages \
+		/usr/lib
 # PYTHON_LIB := $(ANACONDA_HOME)/lib
 
 # Homebrew installs numpy in a non standard path (keg only)
