--- a/Makefile.config
+++ b/Makefile.config
@@ -44,7 +44,7 @@ BLAS := open
 # NOTE: this is required only if you will compile the python interface.
 # We need to be able to find Python.h and numpy/arrayobject.h.
 PYTHON_INCLUDE := /apps/software/Python/2.7.13-foss-2016b/include/python2.7 \
-		/apps/software/Python/2.7.13-foss-2016b/lib/python2.7/site-packages/numpy-1.11.1-py2.7-linux-x86_64.egg/numpy/core/include
+		/apps/software/Python/2.7.13-foss-2016b/lib/python2.7/site-packages/numpy-1.11.1-py2.7-linux-x86_64.egg/numpy/core/include \
 		/usr/include/python2.7 \
 		/usr/lib/python2.7/dist-packages/numpy/core/include 
 # Anaconda Python distribution is quite popular. Include path:
