--- a/Makefile.config
+++ b/Makefile.config
@@ -67,8 +67,8 @@ PYTHON_LIB :=  $FASTDIR/virtualenvs/hed/lib/python2.7/site-packages \
 # WITH_PYTHON_LAYER := 1
 
 # Whatever else you find you need goes here.
-INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include
-LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib
+INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include /fast/users/a1647667/boost/include
+LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib /fast/users/a1647667/boost/lib
 
 # If Homebrew is installed at a non standard location (for example your home directory) and you use it for general dependencies
 # INCLUDE_DIRS += $(shell brew --prefix)/include
