--- a/Makefile.config
+++ b/Makefile.config
@@ -43,7 +43,7 @@ BLAS := open
 
 # NOTE: this is required only if you will compile the python interface.
 # We need to be able to find Python.h and numpy/arrayobject.h.
-PYTHON_INCLUDE := $(python -c "from distutils import sysconfig; print sysconfig.get_python_inc()") $(python -c "import numpy as np; print np.get_include()")
+PYTHON_INCLUDE := $PY_INC
 # Anaconda Python distribution is quite popular. Include path:
 # Verify anaconda location, sometimes it's in root.
 # ANACONDA_HOME := $(HOME)/anaconda
@@ -52,7 +52,7 @@ PYTHON_INCLUDE := $(python -c "from distutils import sysconfig; print sysconfig.
 		# $(ANACONDA_HOME)/lib/python2.7/site-packages/numpy/core/include \
 
 # We need to be able to find libpythonX.X.so or .dylib.
-PYTHON_LIB :=  $(python -c "from distutils import sysconfig; print sysconfig.get_python_lib()")
+PYTHON_LIB :=  $PY_LIB
 # PYTHON_LIB := $(ANACONDA_HOME)/lib
 
 # Homebrew installs numpy in a non standard path (keg only)
