--- a/Makefile.config
+++ b/Makefile.config
@@ -63,8 +63,8 @@ PYTHON_LIB :=  $PY_LIB
 # WITH_PYTHON_LAYER := 1
 
 # Whatever else you find you need goes here.
-INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include
-LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib
+INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include $BOOST_INCLUDE
+LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib $BOOST_LIB
 
 # If Homebrew is installed at a non standard location (for example your home directory) and you use it for general dependencies
 # INCLUDE_DIRS += $(shell brew --prefix)/include
