--- a/Makefile.config
+++ b/Makefile.config
@@ -43,7 +43,7 @@ BLAS := open
 
 # NOTE: this is required only if you will compile the python interface.
 # We need to be able to find Python.h and numpy/arrayobject.h.
-PYTHON_INCLUDE := $PY_INC
+PYTHON_INCLUDE := $PY_INC $NUMPY_INC
 # Anaconda Python distribution is quite popular. Include path:
 # Verify anaconda location, sometimes it's in root.
 # ANACONDA_HOME := $(HOME)/anaconda
