Added brackets after $

--- a/Makefile.config
+++ b/Makefile.config
@@ -43,7 +43,7 @@ BLAS := open
 
 # NOTE: this is required only if you will compile the python interface.
 # We need to be able to find Python.h and numpy/arrayobject.h.
-PYTHON_INCLUDE := $PY_INC $NUMPY_INC
+PYTHON_INCLUDE := $(PY_INC) $(NUMPY_INC)
 # Anaconda Python distribution is quite popular. Include path:
 # Verify anaconda location, sometimes it's in root.
 # ANACONDA_HOME := $(HOME)/anaconda
@@ -52,7 +52,7 @@ PYTHON_INCLUDE := $PY_INC $NUMPY_INC
 		# $(ANACONDA_HOME)/lib/python2.7/site-packages/numpy/core/include \
 
 # We need to be able to find libpythonX.X.so or .dylib.
-PYTHON_LIB :=  $PY_LIB
+PYTHON_LIB :=  $(PY_LIB)
 # PYTHON_LIB := $(ANACONDA_HOME)/lib
 
 # Homebrew installs numpy in a non standard path (keg only)
@@ -63,8 +63,8 @@ PYTHON_LIB :=  $PY_LIB
 # WITH_PYTHON_LAYER := 1
 
 # Whatever else you find you need goes here.
-INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include $BOOST_INCLUDE
-LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib $BOOST_LIB
+INCLUDE_DIRS := $(PYTHON_INCLUDE) /usr/local/include $(BOOST_INCLUDE)
+LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib $(BOOST_LIB)
 
 # If Homebrew is installed at a non standard location (for example your home directory) and you use it for general dependencies
 # INCLUDE_DIRS += $(shell brew --prefix)/include
